@@ -1,3 +1,8 @@
+2008-05-02  Jonh Wendell <jwendell@gnome.org>
+
+	* src/vinagre-tab.c: Initial support for VEncrypt sessions.
+	Patch from Henrik Holst. Closes #530712.
+
 2008-04-30  Jonh Wendell <jwendell@gnome.org>
 
 	* src/vinagre-prefs-manager.[ch],
